fix header height on tablet

--- a/themes/clearvalue/assets/scss/content.scss
+++ b/themes/clearvalue/assets/scss/content.scss
@@ -199,7 +199,7 @@
     }
 
     .heading {
-      padding: 3.6rem 0 6rem;
+      margin-top: 6.143rem;
 
       .page-title {
         font-size: 2.857rem;
