--- a/themes/clearvalue/assets/scss/pages/blog-post.scss
+++ b/themes/clearvalue/assets/scss/pages/blog-post.scss
@@ -267,7 +267,8 @@
     }
 
     .post-content {
-      padding: 0 0 7.1rem;
+      margin-top: 6.143rem;
+      padding: 1rem 0 7.1rem;
 
       h1 {
         font-size: 2rem;
