--- a/themes/clearvalue/assets/scss/pages/faq.scss
+++ b/themes/clearvalue/assets/scss/pages/faq.scss
@@ -110,7 +110,7 @@
     }
 
     .heading {
-      padding: 3.35rem 0 7.35rem 1.5rem;
+      padding: 5.35rem 0 7.35rem 1.5rem;
 
       .page-title {
         font-size: 2.571rem;
