--- a/themes/clearvalue/assets/scss/pages/our-story.scss
+++ b/themes/clearvalue/assets/scss/pages/our-story.scss
@@ -123,7 +123,7 @@
     }
 
     .heading {
-      padding: 3.35rem 0 4.2rem;
+      padding: 5.35rem 0 4.2rem;
 
       .page-title {
         font-size: 2.571rem;
